fix: album text no longer overflows and is now properly centred

--- a/styles/pages/home.scss
+++ b/styles/pages/home.scss
@@ -64,4 +64,7 @@ main {
     ul {
         padding-inline-start: 0px;
     }
+    #album-name {
+        text-align: center;
+    }
 }
